# binja-JNIAnalyzer

./: LICENSE  README.md  __init__.py  install_linux.sh  install_macos.sh  mlil_unimplemented.txt  plugin.json  pyproject.toml  requirements.txt
jnianalyzer/: __init__.py  apkimporter.py  binja_utils.py  jniparser.py  registernatives.py  type_propagation.py  visitor.py
